--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --pink: #f14e95;
   --bg: #0a0a0a;
-  --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
+  --shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 body {
